themes/app/src/css/stylesheet.css
/* ... */
.light-grey-bg {
	color:#151515;
	background-color: #ececec;
}
.medium-grey-bg {
	background-color: #1d1d1d;
}
.medium-grey-bg-2 {
	background-color: #3d3d3d;
}
.dark-grey-bg-2 {
	background-color: #333333;
}
.dark-grey-bg {
	background-color: #151515;
}

/* ---------------------------------------------------------------------------- BACKGROUND ENDS ------------------ */

/* ---------------------------------------------------------------------------- MEDIA QURIES STARTS ------------------ */

@media (min-width:992px) and (max-width:1199px) {
.index-blocks .box {
	padding-top: 20px!important;
	padding-bottom: 20px!important;
	padding-left: 30px!important;
	padding-right: 30px!important;
}
.blog .post .details .button-meta {
	margin-top: 16px;
}
.blog .post .details .meta span {
	padding-left: 0;
	padding-right: 18px;
}
.blog .post .details .button {
	float: left;
}
.blog .post .details .meta {
	padding-bottom: 20px;
	margin-bottom: 10px;
	float: left;
}
}
@media (min-width:768px) and (max-width:991px) {
.index-blocks .box {
	padding-top: 30px!important;
	padding-bottom: 50px!important;
	padding-left: 40px!important;
	padding-right: 40px!important;
}
.news-carousel.owl-theme .owl-controls {
	margin-top: 60px!important;
}
.index-partners {
	margin-top: 2px;
	text-align: center;
}
}
/*@media (min-width:320px) and (max-width:767px) {*/
#navigation ul.nav {
	padding-top: 20px;
	padding-bottom: 20px;
}
#navigation ul.nav li a {
	font-family: 'Play', sans-serif;
	text-decoration: none;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
	color: #fff;
	font-size: 15px;
	padding-top: 23px;
	padding-bottom: 23px;
	padding-left: 12px;
	padding-right: 12px;
	text-transform: uppercase;
	font-weight: 400;
	border-top-width: 0;
	border-top-style: solid;
	border-top-color: #151515;
}
#navigation ul.nav a:hover {
	color: #00c0e2;
	border-top-width: 0;
	border-top-style: solid;
	border-top-color: #00c0e2;
}
#navigation ul.nav .active a {
	color: #00c0e2;
	border-top-width: 0;
	border-top-style: solid;
	border-top-color: #00c0e2;
}
.inner-banner {
	padding-top: 60px;
	padding-bottom: 60px;
}
.inner-banner h1 {
	font-size: 32px;
	font-weight: 600;
	color: #fff;
	text-align: center;
	text-transform: uppercase;
	padding: 0;
	margin: 0;
}
.breadcrumb {
	list-style: none;
	background-color: transparent;
	border-radius: 0;
	text-align: center;
}
.inner-banner .box {
	margin-top: 20px;
}
.inner-banner .box h2 {
	font-size: 15px;
	font-weight: 500;
	color: #fff;
	text-transform: uppercase;
	text-align: center;
	padding: 0;
	margin: 0;
	line-height: normal;
	padding-top: 20px;
	padding-bottom: 20px;
}
.index-blocks .box {
	padding-top: 30px!important;
	padding-bottom: 50px!important;
	padding-left: 40px!important;
	padding-right: 40px!important;
}
.navbar-nav {
	margin-left: 0!important;
	float: none!important;
	text-align: left!important;
}
#navigation ul.nav li a {
	padding-top: 6px;
	padding-bottom: 6px;
}
.engage {
	text-align: center;
}
.engage__summary {
	text-align: left;
}
.index-partners {
	margin-top: 2px;
	text-align: center;
}
.index-news {
	padding-top: 30px;
	padding-bottom: 40px;
}
.index-news .block {
	padding-left: 30px;
	padding-right: 30px;
}
.index-partners {
	padding-top: 30px;
	padding-bottom: 30px;
}
.index-pricing {
	padding-top: 30px;
	padding-bottom: 30px;
}
.about-us .intro .description, .schedule .intro .description, .events .intro .description {
	padding-bottom: 40px;
}
.news-carousel.owl-theme .owl-controls {
	margin-top: 60px!important;
}
.classes .block .info {
	padding-top: 40px;
}
.trainer .block .info {
	padding-top: 40px;
}
.contacts .form {
	padding-bottom: 40px;
}
footer .links, footer .contact {
	margin-top: 50px;
}
footer .links ul.links {
	margin-bottom: 30px;
}
.copyright {
	text-align: center;
}
.copyright ul.social-icons {
	text-align: center;
	margin-top: 10px;
}

/* ---------------------------------------------------------------------------- MEDIA QURIES ENDS ------------------ */

